--- a/src/bunit.web.tests/bunit.web.tests.csproj
+++ b/src/bunit.web.tests/bunit.web.tests.csproj
@@ -8,12 +8,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.*" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.3" />
 		<PackageReference Include="AngleSharp" Version="0.14.0" />
 		<PackageReference Include="AngleSharp.Css" Version="0.14.0" />
 		<PackageReference Include="AngleSharp.Diffing" Version="0.14.0" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
 		<PackageReference Include="Moq" Version="4.14.1" />
 		<PackageReference Include="Shouldly" Version="4.0.0-beta0002" />
 		<PackageReference Include="xunit" Version="2.4.1" />
