--- a/src/bunit.xunit.tests/bunit.xunit.tests.csproj
+++ b/src/bunit.xunit.tests/bunit.xunit.tests.csproj
@@ -8,10 +8,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.*" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.3" />
 		<PackageReference Include="System.Reflection.Metadata" Version="1.8.0" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
 		<PackageReference Include="Moq" Version="4.14.1" />
 		<PackageReference Include="Shouldly" Version="4.0.0-beta0002" />
 		<PackageReference Include="xunit" Version="2.4.1" />
