--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Docs
+name: "Build and Deploy Docs"
 
 on:
   push:
@@ -15,34 +15,49 @@ jobs:
       - uses: actions/checkout@v2   
         with:
           fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
+
       - uses: dotnet/nbgv@master
         with:
           setAllVars: true
+
       - name: Setting VERSION
         run: echo "::set-env name=VERSION::$NBGV_NuGetPackageVersion"
+      
       - name: Update tokens in project files
         uses: cschleiden/replace-tokens@v1
         with:
           files: '["docs/site/*.md", "docs/**/*.md", "docs/**/*.tmpl.partial", "*.csproj", "**/*.csproj"]'
+      
       - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '3.1.202'
+          dotnet-version: '3.1.x'
+      - uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '5.0.100-preview.7.20366.6'
+      - name: DOTNET HACK
+        shell: pwsh
+        run: |
+          $version = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Leaf;
+          $root = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Parent;
+          $directories = Get-ChildItem $root | Where-Object { $_.Name -ne $version };
+          foreach ($dir in $directories) {
+            $from = $dir.FullName;
+            $to = "$root/$version";
+            Write-Host Copying from $from to $to;
+            Copy-Item "$from\*" $to -Recurse -Force;
+          }
+      
       - name: Building library
-        run: |
-          dotnet restore src
-          dotnet build src/bunit.core/ --no-restore -p:version=$VERSION
-          dotnet build src/bunit.web/ --no-restore -p:version=$VERSION
-          dotnet build src/bunit.xunit/ --no-restore -p:version=$VERSION
+        run: dotnet build src -p:version=$VERSION
+
       - name: Verfiy docs samples
-        run: |
-          dotnet test docs/samples/tests/mstest
-          dotnet test docs/samples/tests/nunit
-          dotnet test docs/samples/tests/razor
-          dotnet test docs/samples/tests/xunit
+        run: dotnet test docs/samples
+
       - name: Building docs
         run: |    
           dotnet build docs/site/
           dotnet build docs/site/          
+          
       - name: Deploy to GitHub Pages
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
