--- a/src/bunit.core.tests/bunit.core.tests.csproj
+++ b/src/bunit.core.tests/bunit.core.tests.csproj
@@ -1,37 +1,46 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
-	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
-		<IsPackable>false</IsPackable>
-		<RootNamespace>Bunit</RootNamespace>
-		<AssemblyName>Bunit.Core.Tests</AssemblyName>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
+    <IsPackable>false</IsPackable>
+    <RootNamespace>Bunit</RootNamespace>
+    <AssemblyName>Bunit.Core.Tests</AssemblyName>
+  </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.1" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.1" />
-		<PackageReference Include="AngleSharp" Version="0.14.0" />
-		<PackageReference Include="AngleSharp.Css" Version="0.14.0" />
-		<PackageReference Include="AngleSharp.Diffing" Version="0.14.0" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
-		<PackageReference Include="Moq" Version="4.14.1" />
-		<PackageReference Include="Shouldly" Version="4.0.0-beta0002" />
-		<PackageReference Include="xunit" Version="2.4.1" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="coverlet.collector" Version="1.2.1">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-	</ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.1" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0-preview.7.*" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0-preview.7.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.0-preview.7.*" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\bunit.core\bunit.core.csproj" />
-		<ProjectReference Include="..\bunit.web\bunit.web.csproj" />
-		<ProjectReference Include="..\bunit.xunit\bunit.xunit.csproj" />
-		<ProjectReference Include="..\bunit.testassets\bunit.testassets.csproj" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.14.0" />
+    <PackageReference Include="AngleSharp.Css" Version="0.14.0" />
+    <PackageReference Include="AngleSharp.Diffing" Version="0.14.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+    <PackageReference Include="Moq" Version="4.14.1" />
+    <PackageReference Include="Shouldly" Version="4.0.0-beta0002" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="coverlet.msbuild" Version="2.9.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\bunit.core\bunit.core.csproj" />
+    <ProjectReference Include="..\bunit.web\bunit.web.csproj" />
+    <ProjectReference Include="..\bunit.xunit\bunit.xunit.csproj" />
+    <ProjectReference Include="..\bunit.testassets\bunit.testassets.csproj" />
+  </ItemGroup>
 
 </Project>
