--- a/src/bunit.web.tests/bunit.web.tests.csproj
+++ b/src/bunit.web.tests/bunit.web.tests.csproj
@@ -1,15 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
 		<IsPackable>false</IsPackable>
 		<RootNamespace>Bunit</RootNamespace>
 		<AssemblyName>Bunit.Web.Tests</AssemblyName>
 	</PropertyGroup>
 
-	<ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.1" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.1" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.1" />	
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0-preview.7.*" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0-preview.7.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.0-preview.7.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0-preview.7.*" />
+	</ItemGroup>
+	
+	<ItemGroup>
 		<PackageReference Include="AngleSharp" Version="0.14.0" />
 		<PackageReference Include="AngleSharp.Css" Version="0.14.0" />
 		<PackageReference Include="AngleSharp.Diffing" Version="0.14.0" />
@@ -21,9 +32,9 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="coverlet.collector" Version="1.2.1">
-			<PrivateAssets>all</PrivateAssets>
+		<PackageReference Include="coverlet.msbuild" Version="2.9.0">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
 	</ItemGroup>
 
