--- a/.github/workflows/pull-request-checks.yml
+++ b/.github/workflows/pull-request-checks.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Running unit tests
         run: |
-          dotnet test src /nowarn:CS1591 /p:CollectCoverage=true /p:CoverletOutput=./coverage/ /p:CoverletOutputFormat="opencover,lcov" /p:CoverletOutputFormat="opencover" /p:ExcludeByAttribute="Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute" /p:UseSourceLink=true
+          dotnet test src /nowarn:CS1591 /p:CollectCoverage=true /p:CoverletOutput=./coverage/ /p:CoverletOutputFormat=\"opencover,lcov\" /p:ExcludeByAttribute=\"Obsolete,GeneratedCodeAttribute,CompilerGeneratedAttribute\" /p:UseSourceLink=true
 
       - uses: coverallsapp/github-action@v1.1.1
         with:
@@ -122,48 +122,48 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  code-scan:    
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-      with:
-        # We must fetch at least the immediate parents so that if this is
-        # a pull request then we can checkout the head.
-        fetch-depth: 0
+  # code-scan:    
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: Checkout repository
+  #     uses: actions/checkout@v2
+  #     with:
+  #       # We must fetch at least the immediate parents so that if this is
+  #       # a pull request then we can checkout the head.
+  #       fetch-depth: 0
 
-      # If this run was triggered by a pull request event, then checkout
-      # the head of the pull request instead of the merge commit.
-    - run: git checkout HEAD^2
-      if: ${{ github.event_name == 'pull_request' }}
+  #     # If this run was triggered by a pull request event, then checkout
+  #     # the head of the pull request instead of the merge commit.
+  #   - run: git checkout HEAD^2
+  #     if: ${{ github.event_name == 'pull_request' }}
 
-    - uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '3.1.x'
-    - uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '5.0.100-preview.7.20366.6'
-    - name: Move .net SDK's to shared folder (hack)
-      shell: pwsh
-      run: |
-        $version = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Leaf;
-        $root = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Parent;
-        $directories = Get-ChildItem $root | Where-Object { $_.Name -ne $version };
-        foreach ($dir in $directories) {
-          $from = $dir.FullName;
-          $to = "$root/$version";
-          Write-Host Copying from $from to $to;
-          Copy-Item "$from\*" $to -Recurse -Force;
-        }
+  #   - uses: actions/setup-dotnet@v1
+  #     with:
+  #       dotnet-version: '3.1.x'
+  #   - uses: actions/setup-dotnet@v1
+  #     with:
+  #       dotnet-version: '5.0.100-preview.7.20366.6'
+  #   - name: Move .net SDK's to shared folder (hack)
+  #     shell: pwsh
+  #     run: |
+  #       $version = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Leaf;
+  #       $root = Split-Path (Split-Path $ENV:DOTNET_ROOT -Parent) -Parent;
+  #       $directories = Get-ChildItem $root | Where-Object { $_.Name -ne $version };
+  #       foreach ($dir in $directories) {
+  #         $from = $dir.FullName;
+  #         $to = "$root/$version";
+  #         Write-Host Copying from $from to $to;
+  #         Copy-Item "$from\*" $to -Recurse -Force;
+  #       }
 
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v1
-      with:
-        languages: csharp
-        config-file: ./.github/codeql/codeql-config.yml
+  #   - name: Initialize CodeQL
+  #     uses: github/codeql-action/init@v1
+  #     with:
+  #       languages: csharp
+  #       config-file: ./.github/codeql/codeql-config.yml
 
-    - name: Building library
-      run: dotnet build src -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
+  #   - name: Building library
+  #     run: dotnet build src -p:ContinuousIntegrationBuild=true -p:DeterministicSourcePaths=true
 
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v1          
+  #   - name: Perform CodeQL Analysis
+  #     uses: github/codeql-action/analyze@v1          
