--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -60,16 +60,21 @@ jobs:
         with:
           files: '["docs/site/*.md", "docs/**/*.md", "docs/**/*.tmpl.partial", "*.csproj", "**/*.csproj"]'
 
-      - name: 🐜 Ensure nuget.org source on Windows
-        if: matrix.os == 'windows-latest'
-        run: dotnet nuget add source https://api.nuget.org/v3/index.json -n nuget.org --configfile $env:APPDATA\NuGet\NuGet.Config
-        continue-on-error: true
-
       - name: 🧪 Run unit tests
         run: |
-          dotnet test ./tests/bunit.core.tests/bunit.core.tests.csproj -c release --blame-hang --blame-hang-timeout 1m --blame-hang-dump-type full
-          dotnet test ./tests/bunit.web.tests/bunit.web.tests.csproj -c release --blame-hang --blame-hang-timeout 1m --blame-hang-dump-type full
-          dotnet test ./tests/bunit.web.testcomponents.tests/bunit.web.testcomponents.tests.csproj -c release --blame-hang --blame-hang-timeout 1m --blame-hang-dump-type full
+          dotnet test ./tests/bunit.core.tests/bunit.core.tests.csproj -c release --blame-hang-timeout 15s --blame-hang-dump-type full --blame-crash-dump-type full
+          dotnet test ./tests/bunit.web.tests/bunit.web.tests.csproj -c release --blame-hang-timeout 15s --blame-hang-dump-type full --blame-crash-dump-type full
+          dotnet test ./tests/bunit.web.testcomponents.tests/bunit.web.testcomponents.tests.csproj -c release --blame-hang-timeout 15s --blame-hang-dump-type full --blame-crash-dump-type full
+
+      - name: 📛 Upload hang- and crash-dumps on test failure
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          if-no-files-found: ignore
+          name: test-dumps
+          path: |
+            **/*hangdump.dmp
+            **/*crashdump.dmp
 
       - name: 🗳️ Pack library
         run: |
