add: Cache nuget dependencies on CI/CD

--- a/.github/workflows/verification.yml
+++ b/.github/workflows/verification.yml
@@ -45,6 +45,14 @@ jobs:
             7.0.x
           include-prerelease: true
 
+      - name: 💾 Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.nuget/packages
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-
+
       - name: 🎨 Setup color
         run: |
           echo "DOTNET_SYSTEM_CONSOLE_ALLOW_ANSI_COLOR_REDIRECTION=1" >> $GITHUB_ENV
