build: add v2 branch to release-preview and verification workflows

--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -5,7 +5,7 @@ on:
   workflow_run:    
     workflows: [ 'verification' ]
     types: [completed]
-    branches: [main]
+    branches: [main, v2]
 
   workflow_dispatch:
     inputs:
@@ -16,7 +16,7 @@ on:
 
 jobs:
   release-preview:
-    if: github.event_name == 'workflow_dispatch' || (github.ref == 'refs/heads/main' && ${{ github.event.workflow_run.conclusion == 'success' }})
+    if: github.event_name == 'workflow_dispatch' || (github.ref == 'refs/heads/main' && ${{ github.event.workflow_run.conclusion == 'success' }}) || (github.ref == 'refs/heads/v2' && ${{ github.event.workflow_run.conclusion == 'success' }})
     runs-on: ubuntu-latest
     steps:
     
